@@ -3726,14 +3726,16 @@ void create(string config)
 	  "you can make this value lower. With a small cache and a small "
 	  "percentage the GC routine will run more often.",
 	  ({ 5, 10, 15, 20, 25, 30, 35, 40, 50 }));
-#endif
+#endif /* ENABLE_RAM_CACHE */
   defvar("ErrorTheme", "", "Error Theme", TYPE_STRING,
 	 "This is the theme to apply to any error messages generated " +
 	 "automatically by this server. Please enter an absolute path on the virtual " +
          "filesystem(s), otherwise the system-wide default will be used." );
+#ifdef ENABLE_NEW404
   defvar("Old404", 1, "Old-style 404's", TYPE_FLAG,
 	 "This allows you to override the new style error responses and use " +
          "the old fasioned 404 handling." );
+#endif /* ENABLE_NEW404 */
   defvar("ZNoSuchFile", "<title>Sorry. I cannot find this resource</title>\n"
 	 "<body background='/(internal,image)/cowfish-bg' bgcolor='#ffffff'\n"
 	 "text='#000000' alink='#ff0000' vlink='#00007f' link='#0000ff'>\n"
